# Xilinx___MLDebugger

./: CLAUDE.md  mldebuglib.py  pyproject.toml
.github/workflows/: release-aarch64.yml
scripts/: build_aarch64_wheel.py
src/mldebug/: aie_overlay.py  aie_status.py  aie_util.py  batch_runner.py  client_debug.py  debug_server.py  debug_state.py  input_parser.py  interactive_controller.py  interactive_prompt.py  layer_info.py  memory_dumper.py  mladf_report.py  mldebug_cli.py  utils.py  work_dir.py
src/mldebug/arch/: aie2p_defs.py  aie2ps_defs.py  loader.py
src/mldebug/backend/: backend_interface.py  core_dump_impl.py  factory.py  test_impl.py  xrt_impl.py
src/mldebug/extra/: aie_guidance.py  calltree.py
